--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = John Doe
-	email = John@Doe.me
+	name = Riviere Theotime
+	email = theotimeriviere@gmail.com
 [color]
 	ui = auto
 [alias]
